--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "unist-util-visit": "^4.1.2"
   },
   "devDependencies": {
+    "@cloudflare/next-on-pages": "^1.1.0",
     "prettier": "^2.8.8",
     "prettier-plugin-tailwindcss": "^0.3.0",
     "tailwind-scrollbar": "^3.0.4"
