--- a/package.json
+++ b/package.json
@@ -44,7 +44,9 @@
     "rehype-pretty-code": "^0.9.5",
     "rehype-prism-plus": "^1.5.1",
     "rehype-slug": "^5.1.0",
+    "remark": "^14.0.3",
     "remark-gfm": "^3.0.1",
+    "remark-html": "^15.0.2",
     "shiki": "^0.14.2",
     "tailwindcss": "3.3.2",
     "typescript": "5.0.4",
