--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "react-rough-notation": "^1.0.5",
     "react-simple-typewriter": "^5.0.1",
     "react-spring-bottom-sheet": "^3.4.1",
+    "react-toastify": "^10.0.4",
     "remark": "^14.0.3",
     "remark-html": "^15.0.2",
     "sharp": "^0.32.1",
