--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@emotion/styled": "^11.11.0",
     "@headlessui/react": "^1.7.15",
     "@monaco-editor/react": "^4.6.0",
+    "@next/third-parties": "^14.2.4",
     "@types/node": "20.3.1",
     "@types/react": "18.2.14",
     "@types/react-dom": "18.2.6",
