--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "inupurnomo",
-  "version": "1.0.0",
+  "version": "1.5.0",
   "private": true,
   "repository": {
     "type": "git",
@@ -67,5 +67,6 @@
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.9",
     "@types/aos": "^3.0.7"
-  }
+  },
+  "packageManager": "yarn@1.22.22+sha512.a6b2f7906b721bba3d67d4aff083df04dad64c399707841b7acf00f6b133b7ac24255f2652fa22ae3534329dc6180534e98d17432037ff6fd140556e2bb3137e"
 }
