--- a/package.json
+++ b/package.json
@@ -25,12 +25,14 @@
     "@headlessui/react": "^1.7.15",
     "@monaco-editor/react": "^4.6.0",
     "@next/third-parties": "^14.2.4",
+    "@radix-ui/react-slot": "^1.1.0",
     "@types/node": "20.3.1",
     "@types/react": "18.2.14",
     "@types/react-dom": "18.2.6",
     "aos": "^2.3.4",
     "autoprefixer": "10.4.14",
     "axios": "^1.6.7",
+    "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "date-fns": "^3.3.1",
     "date-fns-tz": "^2.0.0",
@@ -40,13 +42,14 @@
     "framer-motion": "^11.0.3",
     "gray-matter": "^4.0.3",
     "gsap": "^3.12.1",
-    "next": "^14.1.0",
+    "next": "^14.2.15",
     "next-seo": "^6.4.0",
     "next-themes": "^0.2.1",
     "nextjs-toploader": "^1.6.6",
     "postcss": "8.4.24",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-hook-form": "^7.53.1",
     "react-icons": "^4.11.0",
     "react-modal-sheet": "^2.2.0",
     "react-resizable-panels": "^2.0.3",
