--- a/package.json
+++ b/package.json
@@ -42,7 +42,8 @@
     "framer-motion": "^11.0.3",
     "gray-matter": "^4.0.3",
     "gsap": "^3.12.1",
-    "next": "^14.2.15",
+    "next": "^15.0.3",
+    "next-pwa": "^5.6.0",
     "next-seo": "^6.4.0",
     "next-themes": "^0.2.1",
     "nextjs-toploader": "^1.6.6",
@@ -69,7 +70,8 @@
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.9",
-    "@types/aos": "^3.0.7"
+    "@types/aos": "^3.0.7",
+    "@types/next-pwa": "^5"
   },
   "packageManager": "yarn@1.22.22+sha512.a6b2f7906b721bba3d67d4aff083df04dad64c399707841b7acf00f6b133b7ac24255f2652fa22ae3534329dc6180534e98d17432037ff6fd140556e2bb3137e"
 }
