--- a/package.json
+++ b/package.json
@@ -20,9 +20,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@codebayu/use-hydration-zustand": "^1.0.4",
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
     "@headlessui/react": "^1.7.15",
+    "@hello-pangea/dnd": "^17.0.0",
     "@monaco-editor/react": "^4.6.0",
     "@next/third-parties": "^14.2.4",
     "@radix-ui/react-slot": "^1.1.0",
@@ -37,6 +39,7 @@
     "date-fns": "^3.3.1",
     "date-fns-tz": "^2.0.0",
     "disqus-react": "^1.1.5",
+    "driver.js": "^1.3.1",
     "eslint": "8.43.0",
     "eslint-config-next": "^14.1.0",
     "framer-motion": "^11.0.3",
@@ -66,7 +69,9 @@
     "tailwind-merge": "^2.2.1",
     "tailwindcss": "3.3.2",
     "typescript": "5.1.3",
-    "usehooks-ts": "^2.13.0"
+    "usehooks-ts": "^2.13.0",
+    "uuid": "^11.0.3",
+    "zustand": "^5.0.1"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.9",
